# openssl-jostle

./: .gitignore  AUTHORS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SERVICES.md  build.gradle  gradle.properties  settings.gradle
.claude/guides/: java-spi.md  native-code.md  testing.md
.claude/skills/add-jce-transformation/: SKILL.md
.claude/skills/add-jce-transformation/evals/: evals.json
.claude/skills/add-jce-transformation/references/: family-patterns.md  verification-checklist.md
.claude/skills/annotate-ops-tests/: SKILL.md
.claude/skills/annotate-ops-tests/scripts/: annotate-ops-tests.py
.claude/skills/audit-jni-ops-coverage/: SKILL.md
.claude/skills/audit-jni-ops-coverage/scripts/: find-missing-jni-ops.py
.claude/skills/audit-openssl-ops-coverage/: SKILL.md
.claude/skills/audit-openssl-ops-coverage/scripts/: find-missing-ops.py
.claude/skills/audit-test-coverage/: SKILL.md
.claude/skills/audit-test-coverage/scripts/: audit-test-coverage.py
.claude/skills/update-services-md/: SKILL.md
.claude/skills/update-services-md/scripts/: update_services_md.py
.github/workflows/: arm.yaml  ci.yaml  intel.yaml
config/checkstyle/: checkstyle.xml  suppressions.xml
interface/: CMakeLists.txt  build.bat  build.sh
interface/ffi/: asn1_ni_ffi.c  block_cipher_ni_ffi.c  ccm_ni_ffi.c  dh_ni_ffi.c  digest_ni_ffi.c  digest_ni_ffi.h  dsa_ni_ffi.c  ec_ni_ffi.c  ed_ni_ffi.c  ffi.c  ffi.h  kdf_ffi.c  ks_ffi.c  mac_ffi.c  md_ffi.c  mldsa_ni_ffi.c  mlkem_ni_ffi.c  native_info_ffi.c  native_info_ffi.h  openssl_ffi.c  openssl_ffi.h  rand_ffi.c  rand_upcall_ffi.c  rand_upcall_ffi.h  rsa_ni_ffi.c  rsa_oaep_ni_ffi.c  rsa_pkcs1_ni_ffi.c  slh_dsa_ni_ffi.c  spec_ni_ffi.c  types.h  xec_ni_ffi.c
interface/jni/: asn1_ni_jni.c  block_cipher_ni_jni.c  byte_array_critical.c  byte_array_critical.h  bytearrays.c  bytearrays.h  ccm_ni_jni.c  dh_ni_jni.c  digest_ni_jni.c  dsa_ni_jni.c  ec_ni_jni.c  ed_jni.c  kdf_jni.c  ks_jni.c  mac_jni.c  md_jni.c  mldsa_ni_jni.c  mlkem_ni_jni.c  native_info_jni.c  open_ssl_jni.c  ops.c  rand_jni.c  rand_upcall_jni.c  rand_upcall_jni.h  rsa_ni_jni.c  rsa_oaep_ni_jni.c  rsa_pkcs1_ni_jni.c  slhdsa_ni_jni.c  spec_ni_jni.c  types.h  xec_ni_jni.c
interface/loading/native/: resolutions.txt
interface/loading/native/linux/aarch64/: deps.txt
interface/loading/native/osx/x86_64/: deps.txt
interface/loading/native/windows/x86_64/: deps.txt
interface/util/: asn1_util.c  asn1_util.h  bc_err_codes.h  block_cipher_ctx.c  block_cipher_ctx.h  ccm_ctx.c  ccm_ctx.h  cipher_mode_pad.h  ctr_u128_t.c  ctr_u128_t.h  dh.c  dh.h  dsa.c  dsa.h  ec.c  ec.h  edec.c  edec.h  encapdecap.c  encapdecap.h  jo_assert.h  jostle_lib_ctx.c  jostle_lib_ctx.h  kdf.c  kdf.h  key_spec.c  key_spec.h  ks.c  ks.h  mac.c  mac.h  macros.h  md.c  md.h  mldsa.c  mldsa.h  mlkem.c  mlkem.h  ops.c  ops.h  (+12 more)
interface/util/rand/: jostle_lib_ctx.c  jostle_lib_ctx.h  rand_upcall.h
jostle/: build.gradle
jostle/src/main/java/org/openssl/jostle/: CryptoServicesRegistrar.java  Loader.java  LoaderUtils.java  NativeServiceJNI.java  NativeServiceNI.java  OpenSSLNameUtil.java  SecureRandomProvider.java  ThreadLocalSecureRandomProvider.java
jostle/src/main/java/org/openssl/jostle/disposal/: Disposable.java  DisposalDaemon.java  NativeDisposer.java  NativeReference.java
jostle/src/main/java/org/openssl/jostle/jcajce/: PKCS12LoadStoreParameter.java  SecretKeyWithEncapsulation.java
jostle/src/main/java/org/openssl/jostle/jcajce/interfaces/: DHKey.java  DSAKey.java  ECKey.java  EdDSAKey.java  EdDSAPrivateKey.java  EdDSAPublicKey.java  MLDSAKey.java  MLDSAPrivateKey.java  MLDSAPublicKey.java  MLKEMKey.java  MLKEMPrivateKey.java  MLKEMPublicKey.java  OSSLKey.java  RSAKey.java  RSAPrivateCrtKey.java  RSAPrivateKey.java  RSAPublicKey.java  SLHDSAKey.java  SLHDSAPrivateKey.java  SLHDSAPublicKey.java  XDHKey.java  XECKey.java
jostle/src/main/java/org/openssl/jostle/jcajce/provider/: AESBlockCipherSpi.java  AESKeyGenerator.java  ARIABlockCipherSpi.java  ASN1ObjectIdentifier.java  AccessException.java  AsymmetricKeyImpl.java  BlockCipherJNI.java  BlockCipherNI.java  BlockCipherSpi.java  CAMELLIABlockCipherSpi.java  DefaultServiceNI.java  EdECObjectIdentifiers.java  EngineCreator.java  ErrorCode.java  InvalidCipherTextException.java  JostleProvider.java  KeyUtil.java  NISTObjectIdentifiers.java  NISelector.java  NSRIObjectIdentifiers.java  NTTObjectIdentifiers.java  OSSLCipher.java  OSSLCipherType.java  OSSLMode.java  OpenSSL.java  OpenSSLException.java  OpenSSLJNI.java  OpenSSLNI.java  OverflowException.java  PrivateKeyUtil.java  (+35 more)
jostle/src/main/java/org/openssl/jostle/math/: package-info.java
jostle/src/main/java/org/openssl/jostle/rand/: DefaultRandSource.java  RandSource.java
jostle/src/main/java/org/openssl/jostle/util/: AccessException.java  AccessSupplier.java  AccessWrapper.java  Arrays.java  BigIntegers.java  Bytes.java  Characters.java  CollectionStore.java  Doubles.java  DumpInfo.java  Encodable.java  Exceptions.java  Fingerprint.java.disabled  IPAddress.java  Integers.java  Iterable.java  Longs.java  MLDSAProxyPrivateKey.java  Memoable.java  MemoableResetException.java  Objects.java  Pack.java  Properties.java  Selector.java  Shorts.java  Store.java  StoreException.java  StreamParser.java  StreamParsingException.java  StringList.java  Strings.java  Times.java  package-info.java
jostle/src/main/java17/org/openssl/jostle/util/: AccessException.java  AccessSupplier.java  AccessWrapper.java
jostle/src/main/java22/org/openssl/jostle/: FFI.java
jostle/src/main/java25/org/openssl/jostle/: FFI.java  NativeServiceFFI.java
jostle/src/main/java25/org/openssl/jostle/rand/: RandSource.java
jostle/src/main/java9/: module-info.java
jostle/src/main/java9/org/openssl/jostle/: ThreadLocalSecureRandomProvider.java
jostle/src/main/java9/org/openssl/jostle/rand/: DefaultRandSource.java
jostle/src/test/java/org/openssl/jostle/: LoaderUtilsTest.java
jostle/src/test/java/org/openssl/jostle/test/: ExpectedJVMTest.java  OpenSSLIntegrationTest.java  ProviderIntegrationTest.java  TestUtil.java
(+481 files in other folders)
